# MiniMax_api_example

./: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt
app_examples/: requirements-mini-agent.txt
app_examples/mini_agent_websearch/: README.md  run_websearch_bot.py  telegram_agent_bot.py  websearch_agent.py
app_examples/mini_agent_websearch/config/: config-example.yaml  mcp-example.json  system_prompt.md
app_examples/novel/: .dockerignore  .gitignore  ARCHITECTURE.md  DEBUG_AUDIT.md  Dockerfile  FIX_PLAN.md  TEST_DEBUG.md  docker-compose.yml  prompt.md  requirements.txt  run_docker.sh  run_novel.py
app_examples/novel/backend/: Dockerfile  requirements.txt
app_examples/novel/docs/: ideas.md
app_examples/novel/engine/: choices.py  minimax_client.py  renderer.py  scene.py  web_server.py
app_examples/novel/scripts/: generate_assets.py
app_examples/novel/tests/: test_choice_handling.py  test_scene_parser.py  test_story_loader.py
app_examples/novel/web_ui/: Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  style.css  tailwind.config.js
app_examples/novel_v2/: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  playwright_asset_test.js  playwright_game_test.js  playwright_test.js
app_examples/novel_v2/backend/: Dockerfile  alembic.ini  migrate.sh  requirements.txt
app_examples/novel_v2/docs/: API.md  ARCHITECTURE.md  STORY_FORMAT.md
app_examples/novel_v2/frontend/: index.html  nginx.conf  package.json  tsconfig.json  vitest.config.ts
app_examples/novel_v2/scripts/: generate_jedi_day_music.py  generate_jedi_day_videos.py  generate_russian_voices.py
app_examples/novel_v2/stories/: WriterGuide.md
app_examples/roguelike/: CMakeLists.txt  README.md  build.bat  build.sh  vcpkg.json
app_examples/roguelike/src/: game.cpp  game.h  main.cpp
app_examples/roguelike/src/ai/: ai_system.cpp  ai_system.h  behaviors.cpp  behaviors.h
app_examples/roguelike/src/assets/: asset_manager.cpp  asset_manager.h  sprite_sheet.cpp  sprite_sheet.h
app_examples/roguelike/src/camera/: camera.cpp  camera.h
app_examples/roguelike/src/combat/: combat.cpp  combat.h
app_examples/roguelike/src/core/: config.h  random.cpp  random.h  types.h
app_examples/roguelike/src/entities/: champion.cpp  champion.h  enemy.cpp  enemy.h  enemy_registry.cpp  enemy_registry.h  entity.cpp  entity.h  item.cpp  item.h  portal.cpp  portal.h
app_examples/roguelike/src/input/: input_handler.cpp  input_handler.h
app_examples/roguelike/src/map/: cellular.cpp  cellular.h  dungeon.cpp  dungeon.h  generator.cpp  generator.h  renderer.cpp  renderer.h
app_examples/roguelike/src/systems/: fov.cpp  fov.h  particle.cpp  particle.h  turn_manager.cpp  turn_manager.h
app_examples/roguelike/src/ui/: hud.cpp  hud.h  menu.cpp  menu.h  message_log.cpp  message_log.h
app_examples/roguelike/tests/: raylib.h  raylib_stub.h  test_champion.cpp  test_combat.cpp  test_dungeon.cpp  test_enemy.cpp  test_fov.cpp  test_item.cpp  test_random.cpp  test_types.cpp
archive/token_plan_deprecated/: README.md
config/: token_plan_limits.yaml
examples/: 01_text_anthropic.py  02_speech_t2a_sync.sh  03_speech_t2a_async.sh  04_video_t2v.sh  05_video_i2v.sh  06_video_poll.sh  07_music_generation.sh  08_lyrics_generation.sh  09_image_t2i.sh  10_image_i2i.sh  common.sh
examples_python/: 01_text_anthropic.py  02_speech_t2a_sync.py  03_speech_t2a_async.py  04_video_t2v.py  05_video_i2v.py  06_video_poll.py  07_music_from_lyrics_file.py  07_music_generation.py  08_lyrics_generation.py  09_image_t2i.py  10_roguelike_assets.py  _env.py  emit_safe_json.py  minimax_http.py
scripts/: run_token_plan_models.sh  tag_lyrics_only.py
(+213 files in other folders)
